--- a/src/main/resources/templates/movie-listing.html
+++ b/src/main/resources/templates/movie-listing.html
@@ -19,9 +19,11 @@
         <a href="#" th:href="@{|/film/${movie.id}|}">
           <!-- Po uruchomieniu aplikacji ścieżka do placeholdera plakatu wygląda nieco inaczej -->
           <img src="../static/img/poster-placeholder.png"
-               th:src="${movie.poster ne null} ? @{|/img/${movie.poster}|} : @{/img/poster-placeholder.png}"
+               th:src="${movie.poster ne null} ? @{|${@environment.getProperty('app.storage.image-prefix')}${movie.poster}|} : @{/img/poster-placeholder.png}"
                alt="tytuł filmu"
-               class="movie-list-item-poster">
+               th:alt="${movie.title}"
+               class="movie-list-item-poster"
+          />
         </a>
         <div class="movie-list-item-card">
           <div class="movie-list-item-content">
