--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -16,7 +16,7 @@
             <div class="movie-summary">
                 <!-- Ustawiamy adres i opis plakatu -->
                 <img src="../static/img/poster-placeholder.png"
-                     th:src="${movie.poster ne null} ? @{|/img/${movie.poster}|} : @{/img/poster-placeholder.png}"
+                     th:src="${movie.poster ne null} ? @{|${@environment.getProperty('app.storage.image-prefix')}${movie.poster}|} : @{/img/poster-placeholder.png}"
                      alt="tytuł filmu"
                      th:alt="${movie.title}"
                      class="movie-summary-cover"
